--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
+  "name": "crud",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
-    "node": "^21.2.0",
-    "node.js": "^0.0.1-security",
     "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "name": "papka",
-  "version": "1.0.0",
-  "main": "server.js",
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
